--- a/medminer.html
+++ b/medminer.html
@@ -17,7 +17,10 @@
       html {
         height: 100%;
         font-family: "Saira Condensed", sans-serif;
-        background-color: #f5f5f5;
+        background-image: url("background.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
       }
 
       .login-container {
@@ -39,18 +42,18 @@
         font-size: 128px;
         font-weight: 700;
         line-height: 1;
-        color: rgba(55, 126, 130, 1);
+        color: #377e82;
         margin-bottom: 0.5rem;
       }
 
       .social-text {
         font-family: "Saira Condensed", sans-serif;
         font-size: 20px;
-        font-weight: 300;
+        font-weight: 400;
         line-height: 31.48px;
         text-align: left;
         margin-bottom: 1rem;
-        color: #333;
+        color: #377e82;
       }
 
       .social-buttons .btn {
@@ -66,6 +69,7 @@
       .social-buttons img {
         width: 24px;
         height: 24px;
+        background-size: cover;
       }
 
       .form-control {
@@ -78,8 +82,10 @@
       }
 
       .forgot-password {
-        font-size: 0.8rem;
+        margin-top: 5px;
+        font-size: 15px;
         color: #377e82;
+        margin-left: 10px;
         text-decoration: none;
         align-self: flex-start;
       }
@@ -153,6 +159,28 @@
         color: #d9534f;
         cursor: pointer;
       }
+
+      /* Password container styles */
+      .password-container {
+        position: relative;
+        width: 100%;
+      }
+
+      .password-container input {
+        width: 100%;
+        padding-right: 40px; /* Space for the eye icon */
+      }
+
+      .password-container .toggle-password {
+        position: absolute;
+        right: 15px;
+        top: 55%;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        cursor: pointer;
+        outline: none;
+      }
     </style>
   </head>
   <body class="d-flex justify-content-center align-items-center">
@@ -162,19 +190,36 @@
 
       <div class="social-buttons d-flex justify-content-center mb-3">
         <button class="btn btn-light mr-2">
-          <img src="path/to/facebook-icon.png" alt="Facebook" />
+          <img src="faceb.png" alt="Facebook" />
         </button>
         <button class="btn btn-light mr-2">
-          <img src="path/to/google-icon.png" alt="Google" />
+          <img src="gogle.png" alt="Google" />
         </button>
         <button class="btn btn-light">
-          <img src="path/to/twitter-icon.png" alt="Twitter" />
+          <img src="twitter.png" alt="Twitter" />
         </button>
       </div>
 
       <input type="text" class="form-control" placeholder="Username" />
-      <input type="password" class="form-control" placeholder="Password" />
-      <a href="#" class="forgot-password">forgot password</a>
+
+      <div class="password-container">
+        <input
+          type="password"
+          class="form-control"
+          placeholder="Password"
+          id="password"
+        />
+        <button type="button" class="toggle-password">
+          <img
+            src="eye.png"
+            alt="Toggle Password"
+            id="togglePassword"
+            style="width: 24px; height: 24px"
+          />
+        </button>
+      </div>
+
+      <a href="#" class="forgot-password">Forgot password</a>
       <button type="submit" class="sign-in-btn">SIGN IN</button>
       <span class="signup-link">Sign Up</span>
     </div>
@@ -200,6 +245,20 @@
       closeSignup.addEventListener("click", () => {
         signupContainer.style.display = "none";
       });
+
+      document
+        .getElementById("togglePassword")
+        .addEventListener("click", function () {
+          const passwordField = document.getElementById("password");
+          const type =
+            passwordField.getAttribute("type") === "password"
+              ? "text"
+              : "password";
+          passwordField.setAttribute("type", type);
+
+          // Change icon depending on the type
+          this.src = type === "password" ? "eye.png" : "eye.png";
+        });
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
