--- a/index.html
+++ b/index.html
@@ -120,8 +120,20 @@
     <div class="login-container">
       <h2 class="login-heading text-center">LOG IN</h2>
       <form action="login.php" method="POST">
-        <input type="text" class="form-control" placeholder="Username" name="username" required />
-        <input type="password" class="form-control" placeholder="Password" name="password" required />
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Username"
+          name="username"
+          required
+        />
+        <input
+          type="password"
+          class="form-control"
+          placeholder="Password"
+          name="password"
+          required
+        />
         <button type="submit" class="sign-in-btn">SIGN IN</button>
       </form>
       <span class="signup-link">Sign Up</span>
@@ -132,7 +144,12 @@
       <form action="submit.php" method="POST">
         <input type="text" name="username" placeholder="Username" required />
         <input type="email" name="email" placeholder="Email" required />
-        <input type="password" name="password" placeholder="Password" required />
+        <input
+          type="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
         <button type="submit">Sign Up</button>
       </form>
       <span class="close-signup">Close</span>
