--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
         color: #377e82;
       }
 
+      .social-buttons .btn {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+      }
+
+      .social-buttons img {
+        width: 24px;
+        height: 24px;
+        background-size: cover;
+      }
+
       .form-control {
         width: 100%;
         height: 50px;
@@ -63,6 +79,15 @@
         border: 1px solid rgba(20, 102, 114, 0.4);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         border-radius: 5px;
+      }
+
+      .forgot-password {
+        margin-top: 5px;
+        font-size: 15px;
+        color: #377e82;
+        margin-left: 10px;
+        text-decoration: none;
+        align-self: flex-start;
       }
 
       .sign-in-btn {
@@ -73,6 +98,14 @@
         border-radius: 5px;
         font-size: 1rem;
         cursor: pointer;
+      }
+
+      .sign-up {
+        display: block;
+        margin-top: 1rem;
+        font-size: 0.8rem;
+        color: #377e82;
+        text-decoration: none;
       }
 
       .signup-container {
@@ -103,6 +136,7 @@
         margin: 10px 0;
         border-radius: 5px;
         border: 1px solid rgba(20, 102, 114, 0.4);
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       }
 
       .signup-container button {
@@ -114,54 +148,129 @@
         border-radius: 5px;
         cursor: pointer;
       }
+
+      .signup-container button:hover {
+        background-color: #31b0d5;
+      }
+
+      .signup-container .close-signup {
+        margin-top: 10px;
+        display: block;
+        color: #d9534f;
+        cursor: pointer;
+      }
+
+      /* Password container styles */
+      .password-container {
+        position: relative;
+        width: 100%;
+      }
+
+      .password-container input {
+        width: 100%;
+        padding-right: 40px; /* Space for the eye icon */
+      }
+
+      .password-container .toggle-password {
+        position: absolute;
+        right: 15px;
+        top: 55%;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        cursor: pointer;
+        outline: none;
+      }
     </style>
   </head>
   <body class="d-flex justify-content-center align-items-center">
     <div class="login-container">
       <h2 class="login-heading text-center">LOG IN</h2>
+      <p class="social-text">Log in using social network</p>
+
+      <div class="social-buttons d-flex justify-content-center mb-3">
+        <button class="btn btn-light mr-2">
+          <img src="faceb.png" alt="Facebook" />
+        </button>
+        <button class="btn btn-light mr-2">
+          <img src="gogle.png" alt="Google" />
+        </button>
+        <button class="btn btn-light">
+          <img src="twitter.png" alt="Twitter" />
+        </button>
+      </div>
+
+      <!-- Updated Form Action -->
       <form action="login.php" method="POST">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Username"
-          name="username"
-          required
-        />
-        <input
-          type="password"
-          class="form-control"
-          placeholder="Password"
-          name="password"
-          required
-        />
+        <input type="text" class="form-control" placeholder="Username" name="user_name" required />
+
+        <div class="password-container">
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Password"
+            id="password"
+            name="password"
+            required
+          />
+          <button type="button" class="toggle-password">
+            <img
+              src="eye.png"
+              alt="Toggle Password"
+              id="togglePassword"
+              style="width: 24px; height: 24px"
+            />
+          </button>
+        </div>
+
+        <a href="#" class="forgot-password">Forgot password</a>
         <button type="submit" class="sign-in-btn">SIGN IN</button>
       </form>
+
       <span class="signup-link">Sign Up</span>
     </div>
 
     <div class="signup-container">
       <h2>SIGN UP</h2>
+
+      <!-- Updated Form Action -->
       <form action="submit.php" method="POST">
         <input type="text" name="username" placeholder="Username" required />
         <input type="email" name="email" placeholder="Email" required />
-        <input
-          type="password"
-          name="password"
-          placeholder="Password"
-          required
-        />
+        <input type="password" name="password" placeholder="Password" required />
         <button type="submit">Sign Up</button>
       </form>
+      
       <span class="close-signup">Close</span>
     </div>
 
     <script>
-      document.querySelector(".signup-link").addEventListener("click", () => {
-        document.querySelector(".signup-container").style.display = "block";
+      const signupLink = document.querySelector(".signup-link");
+      const signupContainer = document.querySelector(".signup-container");
+      const closeSignup = document.querySelector(".close-signup");
+
+      signupLink.addEventListener("click", () => {
+        signupContainer.style.display = "block";
       });
-      document.querySelector(".close-signup").addEventListener("click", () => {
-        document.querySelector(".signup-container").style.display = "none";
+
+      closeSignup.addEventListener("click", () => {
+        signupContainer.style.display = "none";
       });
+
+      document
+        .getElementById("togglePassword")
+        .addEventListener("click", function () {
+          const passwordField = document.getElementById("password");
+          const type =
+            passwordField.getAttribute("type") === "password"
+              ? "text"
+              : "password";
+          passwordField.setAttribute("type", type);
+
+          // Change icon depending on the type
+          this.src = type === "password" ? "eye.png" : "eye.png";
+        });
     </script>
-  </body>
-</html>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body
