--- a/afterlogin.html
+++ b/afterlogin.html
@@ -4,15 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Med Minder</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&family=Saira+Condensed:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&family=Saira+Condensed:wght@300&display=swap" rel="stylesheet" /> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" /> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> 
     <style>
       body {
         background-color: #a6dace;
@@ -256,7 +250,7 @@
       }
 
       .status.warning {
-        background-color: #ff9800;
+        background-color        : #ff9800;
       }
 
       .status.safe {
@@ -382,22 +376,106 @@
         }
       }
 
-      // Run functions on page load
-      window.onload = () => {
+      // Fetch medicines from the server
+      function loadMedicines() {
+        fetch('get_medicines.php')
+          .then(response => response.json())
+          .then(medicines => {
+            medicines.forEach(medicine => addMedicineToList(medicine));
+            updateUpcomingExpirations();
+          });
+      }
+
+      // Add a medicine to the DOM
+      function addMedicineToList(medicine) {
+        const expiryDate = new Date(medicine.expiry_date);
+        const today = new Date();
+        const daysLeft = Math.ceil((expiryDate - today) / (1000 * 60 * 60 * 24));
+
+        let statusClass = '';
+        let statusText = '';
+
+        if (daysLeft < 0) {
+          statusClass = 'expired';
+          statusText = 'Expired';
+        } else if (daysLeft <= 7) {
+          statusClass = 'warning';
+          statusText = 'Expiring Soon';
+        } else {
+          statusClass = 'safe';
+          statusText = 'Safe';
+        }
+
+        const listItem = document.createElement('li');
+        listItem.innerHTML = `
+          <span class="name">${medicine.name}</span> 
+          (<span class="quantity">${medicine.quantity}</span>)
+          <span class="expiry" data-expiry="${medicine.expiry_date}"> - 
+            <span class="status ${statusClass}">${statusText}</span>
+          </span>
+          <button class="delete-btn" onclick="deleteMedicine(this)">Delete</button>
+        `;
+        document.getElementById("medicine-list").appendChild(listItem);
+      }
+
+      // Delete a medicine
+      function deleteMedicine(button) {
+        const li = button.parentElement;
+        li.remove();
+        saveMedicines();
+      }
+
+      // Update the Upcoming Expirations box
+      function updateUpcomingExpirations() {
+        const upcomingExpirationsList = document.getElementById("upcoming-expirations-list");
+        upcomingExpirationsList.innerHTML = ''; // Clear the list
+        const today = new Date();
+        fetch('get_medicines.php')
+          .then(response => response.json())
+          .then(medicines => {
+            medicines.forEach(medicine => {
+              const expiryDate = new Date(medicine.expiry_date);
+              const daysLeft = Math.ceil((expiryDate - today) / (1000 * 60 * 60 * 24));
+
+              if (daysLeft > 0 && daysLeft <= 7) {
+                const listItem = document.createElement('li');
+                listItem.textContent = `${medicine.name} is expiring in ${daysLeft} day(s).`;
+                upcomingExpirationsList.appendChild(listItem);
+              }
+            });
+          });
+      }
+
+      // Handle form submission
+      document.addEventListener("DOMContentLoaded", function() {
+        const form = document.querySelector("form");
+        form.addEventListener("submit", function(event) {
+          event.preventDefault();
+          const formData = new FormData(form);
+          fetch('add_medicine.php', {
+            method: 'POST',
+            body: formData
+          })
+          .then(response => response.json())
+          .then(data => {
+            if (data.status === "success") {
+              addMedicineToList(data.medicine);
+              updateUpcomingExpirations();
+              form.reset(); // Clear the form after submission
+            } else {
+              alert("Error: " + data.message);
+            }
+          })
+          .catch(error => {
+            console.error("Error:", error);
+          });
+        });
+
+        // Initial loading of data
         displayCurrentDate();
         loadTasks();
-      };
-      // Get the current URL
-      const currentPage = window.location.pathname;
-
-      // Highlight the inventory button dynamically
-      if (currentPage.includes("inventory.html")) {
-        document.querySelectorAll(".nav-link").forEach((link) => {
-          if (link.href.includes("inventory.html")) {
-            link.classList.add("active");
-          }
-        });
-      }
+        loadMedicines();
+      });
     </script>
   </head>
   <body>
@@ -444,14 +522,12 @@
 
           <div class="box box3">
             <h4>Add Medicine</h4>
-            <input type="text" id="medicine-name" placeholder="Medicine Name" />
-            <input
-              type="number"
-              id="medicine-quantity"
-              placeholder="Quantity"
-            />
-            <input type="date" id="medicine-expiry" placeholder="Expiry Date" />
-            <button onclick="addMedicine()">Add Medicine</button>
+            <form>
+              <input type="text" id="medicine-name" name="name" placeholder="Medicine Name" required />
+              <input type="number" id="medicine-quantity" name="quantity" placeholder="Quantity" required />
+              <input type="date" id="medicine-expiry" name="expiry_date" placeholder="Expiry Date" required />
+              <button type="              <button type="submit">Add Medicine</button>
+            </form>
           </div>
 
           <div class="box box2">Box 2</div>
@@ -474,115 +550,5 @@
         </div>
       </div>
     </div>
-    <script>
-      const medicineList = document.getElementById("medicine-list");
-      const upcomingExpirationsList = document.getElementById(
-        "upcoming-expirations-list"
-      );
-
-      // Load medicines from localStorage
-      function loadMedicines() {
-        const medicines = JSON.parse(localStorage.getItem("medicines")) || [];
-        medicines.forEach((medicine) => addMedicineToList(medicine));
-        updateUpcomingExpirations();
-      }
-
-      // Save medicines to localStorage
-      function saveMedicines() {
-        const medicines = [];
-        medicineList.querySelectorAll("li").forEach((li) => {
-          const name = li.querySelector(".name").textContent;
-          const quantity = li.querySelector(".quantity").textContent;
-          const expiry = li.querySelector(".expiry").dataset.expiry;
-          medicines.push({ name, quantity, expiry });
-        });
-        localStorage.setItem("medicines", JSON.stringify(medicines));
-        updateUpcomingExpirations();
-      }
-
-      // Add a medicine to the list
-      function addMedicine() {
-        const name = document.getElementById("medicine-name").value;
-        const quantity = document.getElementById("medicine-quantity").value;
-        const expiryDate = document.getElementById("medicine-expiry").value;
-
-        if (!name || !quantity || !expiryDate) {
-          alert("Please fill out all fields!");
-          return;
-        }
-
-        const medicine = { name, quantity, expiry: expiryDate };
-        addMedicineToList(medicine);
-        saveMedicines();
-
-        document.getElementById("medicine-name").value = "";
-        document.getElementById("medicine-quantity").value = "";
-        document.getElementById("medicine-expiry").value = "";
-      }
-
-      // Add a medicine to the DOM
-      function addMedicineToList(medicine) {
-        const expiryDate = new Date(medicine.expiry);
-        const today = new Date();
-        const daysLeft = Math.ceil(
-          (expiryDate - today) / (1000 * 60 * 60 * 24)
-        );
-
-        let statusClass = "";
-        let statusText = "";
-
-        if (daysLeft < 0) {
-          statusClass = "expired";
-          statusText = "Expired";
-        } else if (daysLeft <= 7) {
-          statusClass = "warning";
-          statusText = "Expiring Soon";
-        } else {
-          statusClass = "safe";
-          statusText = "Safe";
-        }
-
-        const listItem = document.createElement("li");
-        listItem.innerHTML = `
-          <span class="name">${medicine.name}</span> 
-          (<span class="quantity">${medicine.quantity}</span>)
-          <span class="expiry" data-expiry="${medicine.expiry}"> - 
-            <span class="status ${statusClass}">${statusText}</span>
-          </span>
-          <button class="delete-btn" onclick="deleteMedicine(this)">Delete</button>
-        `;
-        medicineList.appendChild(listItem);
-      }
-
-      // Delete a medicine
-      function deleteMedicine(button) {
-        const li = button.parentElement;
-        li.remove();
-        saveMedicines();
-      }
-
-      // Update the Upcoming Expirations box
-      function updateUpcomingExpirations() {
-        upcomingExpirationsList.innerHTML = ""; // Clear the list
-        const today = new Date();
-        const medicines = JSON.parse(localStorage.getItem("medicines")) || [];
-
-        medicines.forEach((medicine) => {
-          const expiryDate = new Date(medicine.expiry);
-          const daysLeft = Math.ceil(
-            (expiryDate - today) / (1000 * 60 * 60 * 24)
-          );
-
-          if (daysLeft > 0 && daysLeft <= 7) {
-            const listItem = document.createElement("li");
-            listItem.textContent = `${medicine.name} is expiring in ${daysLeft} day(s).`;
-            upcomingExpirationsList.appendChild(listItem);
-          }
-        });
-      }
-
-      // Initialize the app
-      loadMedicines();
-    </script>
   </body>
 </html>
