--- a/afterlogin.html
+++ b/afterlogin.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Med Minder</title>
-    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&family=Saira+Condensed:wght@300&display=swap" rel="stylesheet" /> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" /> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&family=Saira+Condensed:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
       body {
         background-color: #a6dace;
@@ -43,6 +49,10 @@
         border-radius: 30px;
         transition: background-color 0.3s ease;
       }
+      .nav-link:hover {
+        background-color: #f8e37e; /* The background color when hovered */
+        color: #ffffff; /* The text color when hovered */
+      }
       .nav-link.active {
         background-color: #f8e37e;
         color: #ffffff;
@@ -73,13 +83,14 @@
         display: grid;
         grid-template-columns: auto auto; /* Two columns */
         gap: 0 10px; /* Gap between columns */
-        align-items: center center;
+        align-items: center;
       }
 
       .med-expiry h1,
       .med-expiry h2 {
-        font-size: 50px;
+        font-size: 65px;
         font-weight: bold;
+        margin-left: 40px;
       }
 
       .med-expiry h1 {
@@ -119,6 +130,11 @@
         font-size: 90px;
         font-weight: bold;
       }
+      .reminders {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
       .reminders h2 {
         font-size: 24px;
         color: #146672;
@@ -127,6 +143,70 @@
       .reminders p {
         margin: 0;
         color: #13616c;
+      }
+      .bottle {
+        position: relative;
+        width: 140px; /* Increased width */
+        height: 200px;
+        background-color: #146672;
+        border-radius: 15px; /* Adjusted for proportion */
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        margin-right: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 400px;
+        margin-top: 50px;
+      }
+
+      .bottle::before {
+        content: "";
+        position: absolute;
+        top: -30px;
+        width: 120px; /* Increased width */
+        height: 30px;
+        background-color: #f8e37e;
+        border-radius: 10px; /* Adjusted for proportion */
+      }
+
+      .label {
+        position: absolute;
+        top: 40px;
+        width: 100px; /* Increased width */
+        height: 120px;
+        background-color: #ffffff;
+        border-radius: 8px; /* Adjusted for proportion */
+        border: 2px solid #f8e37e;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .cap {
+        position: absolute;
+        top: -35px;
+        width: 110px; /* Adjusted to match the bottle width */
+        height: 20px; /* Slightly taller cap */
+        background-color: #a6dace;
+        border-radius: 5px;
+      }
+      .tagline {
+        font-weight: bold;
+        color: #146672;
+        margin-left: 170px;
+        margin-top: -200px;
+        margin-bottom: 30px;
+      }
+      .tagline h1,
+      .tagline h2 {
+        font-size: 45px;
+        font-weight: bold;
+        color: #146672;
+      }
+      .tagline h2 {
+        color: #f8e37e;
+        font-weight: bold;
       }
       h2 {
         font-size: 45px;
@@ -148,7 +228,7 @@
       .add-task-container input[type="text"] {
         padding: 10px;
         font-size: 21px;
-        width: 400px;
+        width: 375px;
         border: 2px solid #146672;
         font-family: "Saira Condensed", sans-serif;
         border-radius: 5px;
@@ -171,6 +251,11 @@
         font-size: 17px;
         cursor: pointer;
       }
+      .add-task-container button:hover {
+        background-color: #ffffff; /* Hover color */
+        color: #146672;
+      }
+      
       h2 {
         font-size: 45px;
         color: #146672;
@@ -250,7 +335,7 @@
       }
 
       .status.warning {
-        background-color        : #ff9800;
+        background-color: #ff9800;
       }
 
       .status.safe {
@@ -378,10 +463,10 @@
 
       // Fetch medicines from the server
       function loadMedicines() {
-        fetch('get_medicines.php')
-          .then(response => response.json())
-          .then(medicines => {
-            medicines.forEach(medicine => addMedicineToList(medicine));
+        fetch("get_medicines.php")
+          .then((response) => response.json())
+          .then((medicines) => {
+            medicines.forEach((medicine) => addMedicineToList(medicine));
             updateUpcomingExpirations();
           });
       }
@@ -390,31 +475,33 @@
       function addMedicineToList(medicine) {
         const expiryDate = new Date(medicine.expiry_date);
         const today = new Date();
-        const daysLeft = Math.ceil((expiryDate - today) / (1000 * 60 * 60 * 24));
+        const daysLeft = Math.ceil(
+          (expiryDate - today) / (1000 * 60 * 60 * 24)
+        );
 
-        let statusClass = '';
-        let statusText = '';
+        let statusClass = "";
+        let statusText = "";
 
         if (daysLeft < 0) {
-          statusClass = 'expired';
-          statusText = 'Expired';
+          statusClass = "expired";
+          statusText = "Expired";
         } else if (daysLeft <= 7) {
-          statusClass = 'warning';
-          statusText = 'Expiring Soon';
+          statusClass = "warning";
+          statusText = "Expiring Soon";
         } else {
-          statusClass = 'safe';
-          statusText = 'Safe';
+          statusClass = "safe";
+          statusText = "Safe";
         }
 
-        const listItem = document.createElement('li');
+        const listItem = document.createElement("li");
         listItem.innerHTML = `
-          <span class="name">${medicine.name}</span> 
-          (<span class="quantity">${medicine.quantity}</span>)
-          <span class="expiry" data-expiry="${medicine.expiry_date}"> - 
-            <span class="status ${statusClass}">${statusText}</span>
-          </span>
-          <button class="delete-btn" onclick="deleteMedicine(this)">Delete</button>
-        `;
+            <span class="name">${medicine.name}</span> 
+            (<span class="quantity">${medicine.quantity}</span>)
+            <span class="expiry" data-expiry="${medicine.expiry_date}"> - 
+              <span class="status ${statusClass}">${statusText}</span>
+            </span>
+            <button class="delete-btn" onclick="deleteMedicine(this)">Delete</button>
+          `;
         document.getElementById("medicine-list").appendChild(listItem);
       }
 
@@ -427,18 +514,22 @@
 
       // Update the Upcoming Expirations box
       function updateUpcomingExpirations() {
-        const upcomingExpirationsList = document.getElementById("upcoming-expirations-list");
-        upcomingExpirationsList.innerHTML = ''; // Clear the list
+        const upcomingExpirationsList = document.getElementById(
+          "upcoming-expirations-list"
+        );
+        upcomingExpirationsList.innerHTML = ""; // Clear the list
         const today = new Date();
-        fetch('get_medicines.php')
-          .then(response => response.json())
-          .then(medicines => {
-            medicines.forEach(medicine => {
+        fetch("get_medicines.php")
+          .then((response) => response.json())
+          .then((medicines) => {
+            medicines.forEach((medicine) => {
               const expiryDate = new Date(medicine.expiry_date);
-              const daysLeft = Math.ceil((expiryDate - today) / (1000 * 60 * 60 * 24));
+              const daysLeft = Math.ceil(
+                (expiryDate - today) / (1000 * 60 * 60 * 24)
+              );
 
               if (daysLeft > 0 && daysLeft <= 7) {
-                const listItem = document.createElement('li');
+                const listItem = document.createElement("li");
                 listItem.textContent = `${medicine.name} is expiring in ${daysLeft} day(s).`;
                 upcomingExpirationsList.appendChild(listItem);
               }
@@ -447,28 +538,28 @@
       }
 
       // Handle form submission
-      document.addEventListener("DOMContentLoaded", function() {
+      document.addEventListener("DOMContentLoaded", function () {
         const form = document.querySelector("form");
-        form.addEventListener("submit", function(event) {
+        form.addEventListener("submit", function (event) {
           event.preventDefault();
           const formData = new FormData(form);
-          fetch('add_medicine.php', {
-            method: 'POST',
-            body: formData
+          fetch("add_medicine.php", {
+            method: "POST",
+            body: formData,
           })
-          .then(response => response.json())
-          .then(data => {
-            if (data.status === "success") {
-              addMedicineToList(data.medicine);
-              updateUpcomingExpirations();
-              form.reset(); // Clear the form after submission
-            } else {
-              alert("Error: " + data.message);
-            }
-          })
-          .catch(error => {
-            console.error("Error:", error);
-          });
+            .then((response) => response.json())
+            .then((data) => {
+              if (data.status === "success") {
+                addMedicineToList(data.medicine);
+                updateUpcomingExpirations();
+                form.reset(); // Clear the form after submission
+              } else {
+                alert("Error: " + data.message);
+              }
+            })
+            .catch((error) => {
+              console.error("Error:", error);
+            });
         });
 
         // Initial loading of data
@@ -497,7 +588,7 @@
           <div>
             <h1>MEDICINE</h1>
             <h2>EXPIRY</h2>
-            <h1>DATES</h1>
+            <h1>UPDATES</h1>
           </div>
           <div class="date-container">
             <div class="month"></div>
@@ -506,10 +597,18 @@
         </div>
 
         <div class="card reminders">
-          <h2>Daily Reminders</h2>
-          <p>Take 1 pill of</p>
+          <div class="bottle">
+            <div class="cap"></div>
+            <div class="label">
+              <h2>MEDICINE</h2>
+            </div>
+          </div>
+          <div class="tagline">
+            <h1>Med Minder:</h1>
+            <h2>One Pill a Day</h2>
+            <h1>Keeps Worries Away!</h1>
+          </div>
         </div>
-      </div>
 
       <div class="content">
         <div class="content2">
@@ -523,10 +622,28 @@
           <div class="box box3">
             <h4>Add Medicine</h4>
             <form>
-              <input type="text" id="medicine-name" name="name" placeholder="Medicine Name" required />
-              <input type="number" id="medicine-quantity" name="quantity" placeholder="Quantity" required />
-              <input type="date" id="medicine-expiry" name="expiry_date" placeholder="Expiry Date" required />
-              <button type="              <button type="submit">Add Medicine</button>
+              <input
+                type="text"
+                id="medicine-name"
+                name="name"
+                placeholder="Medicine Name"
+                required
+              />
+              <input
+                type="number"
+                id="medicine-quantity"
+                name="quantity"
+                placeholder="Quantity"
+                required
+              />
+              <input
+                type="date"
+                id="medicine-expiry"
+                name="expiry_date"
+                placeholder="Expiry Date"
+                required
+              />
+              <button type=" <button type="submit">Add Medicine</button>
             </form>
           </div>
 
