--- a/inventory.html
+++ b/inventory.html
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="header">
         <div class="d-flex align-items-center">
-          <img src="logo.png" alt="Med Minder Logo" />
+          <img src="Artboard 1.png" alt="Med Minder Logo" />
           <h1 class="ms-3">Med Minder</h1>
         </div>
         <nav class="nav">
